--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
         "psr/container": "^2.0@dev"
     },
     "suggest": {
+        "potter/socket-aware": "dev-main",
+        "potter/socket": "dev-main",
         "potter/aware-traits": "dev-main",
         "potter/aware": "dev-main",
         "potter/traits": "dev-main",
